docs/6.20.0/users/_sources/usingdakota/reference/method-bayes_calibration-muq.rst.txt
.. _method-bayes_calibration-muq:

"""
muq
"""


Markov Chain Monte Carlo algorithms from the MUQ package



**Topics**


bayesian_calibration


.. toctree::
   :hidden:
   :maxdepth: 1

   method-bayes_calibration-muq-chain_samples
   method-bayes_calibration-muq-seed
   method-bayes_calibration-muq-rng
   method-bayes_calibration-muq-dram
   method-bayes_calibration-muq-delayed_rejection
   method-bayes_calibration-muq-adaptive_metropolis
   method-bayes_calibration-muq-metropolis_hastings
   method-bayes_calibration-muq-mala
   method-bayes_calibration-muq-dr_num_stages
   method-bayes_calibration-muq-dr_scale_type
   method-bayes_calibration-muq-dr_scale
   method-bayes_calibration-muq-am_period_num_steps
   method-bayes_calibration-muq-am_starting_step
   method-bayes_calibration-muq-am_scale
   method-bayes_calibration-muq-mala_step_size
   method-bayes_calibration-muq-proposal_covariance


**Specification**

- *Alias:* None

- *Arguments:* None


**Child Keywords:**

+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Required/Optional       | Description of     | Dakota Keyword          | Dakota Keyword Description                    |
|                         | Group              |                         |                                               |
+=========================+====================+=========================+===============================================+
| Required                                     | `chain_samples`__       | Number of Markov Chain Monte Carlo posterior  |
|                                              |                         | samples                                       |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `seed`__                | Seed of the random number generator           |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `rng`__                 | Selection of a random number generator        |
+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Optional (Choose One)   | MCMC Algorithm     | `dram`__                | Use the DRAM MCMC algorithm                   |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `delayed_rejection`__   | Use the Delayed Rejection MCMC algorithm      |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `adaptive_metropolis`__ | Use the Adaptive Metropolis MCMC algorithm    |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `metropolis_hastings`__ | Use the Metropolis-Hastings MCMC algorithm    |
|                         |                    +-------------------------+-----------------------------------------------+
|                         |                    | `mala`__                | Metropolis-adjusted Langevin algorithm        |
+-------------------------+--------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `dr_num_stages`__       | Number of stages                              |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `dr_scale_type`__       | Type of scaling to use                        |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `dr_scale`__            | Scaling parameter                             |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `am_period_num_steps`__ | Number of steps between updates of the        |
|                                              |                         | proposal covariance                           |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `am_starting_step`__    | Number of steps prior to start of proposal    |
|                                              |                         | covariance adaptation                         |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `am_scale`__            | Sample covariance scaling used to define      |
|                                              |                         | proposal covariance                           |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `mala_step_size`__      | Parameter for the MALA MCMC algorithm in MUQ  |
+----------------------------------------------+-------------------------+-----------------------------------------------+
| Optional                                     | `proposal_covariance`__ | Defines the technique used to generate the    |
|                                              |                         | MCMC proposal covariance.                     |
+----------------------------------------------+-------------------------+-----------------------------------------------+

.. __: method-bayes_calibration-muq-chain_samples.html
__ method-bayes_calibration-muq-seed.html
__ method-bayes_calibration-muq-rng.html
__ method-bayes_calibration-muq-dram.html
__ method-bayes_calibration-muq-delayed_rejection.html
__ method-bayes_calibration-muq-adaptive_metropolis.html
__ method-bayes_calibration-muq-metropolis_hastings.html
__ method-bayes_calibration-muq-mala.html
__ method-bayes_calibration-muq-dr_num_stages.html
__ method-bayes_calibration-muq-dr_scale_type.html
__ method-bayes_calibration-muq-dr_scale.html
__ method-bayes_calibration-muq-am_period_num_steps.html
__ method-bayes_calibration-muq-am_starting_step.html
__ method-bayes_calibration-muq-am_scale.html
__ method-bayes_calibration-muq-mala_step_size.html
__ method-bayes_calibration-muq-proposal_covariance.html



**Description**


The ``muq`` method supports the following MCMC algorithms:
adaptive metropolis (AM), Metropolis Hasting (MH), delayed
rejection (DR), delayed-rejection adaptive metropolis (DRAM),
or Metropolis-adjusted Langevin algorithm (MALA).

The ``muq`` method is currently an experimental method that relies
on algorithms from MIT's MUQ code documented at:
https://bitbucket.org/mituq/muq2/src/master/



